# dash

./: app.py  pyproject.toml  requirements.txt
assets/: offices.json
dash_prod/: app.py
layout/: filter.py  header.py  tabs.py
queries/: queries.py
tab1_charts/: kpi_cards.py  pie.py  table.py  word_cloud.py
tab_content/: tab1_content.py
