[project]
name = "dash-prod"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.0.4",
    "dash-bootstrap-components>=2.0.3",
    "dash-bootstrap-templates>=2.1.0",
    "dash-daq>=0.6.0",
    "dash-leaflet>=1.1.3",
    "duckdb>=1.3.2",
    "jupyter-dash>=0.4.2",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "pip>=25.1",
    "plotly>=6.0.1",
    "wordcloud>=1.9.4",
]

[dependency-groups]
dev = [
    "pyclean>=3.1.0",
    "ruff>=0.12.9",
]
